--- a/.github/workflows/ollama_openvino_build_and_test.yml
+++ b/.github/workflows/ollama_openvino_build_and_test.yml
@@ -34,6 +34,7 @@ jobs:
           wget https://storage.openvinotoolkit.org/repositories/openvino_genai/packages/nightly/2025.2.0.0.dev20250320/openvino_genai_ubuntu20_2025.2.0.0.dev20250320_x86_64.tar.gz
           tar -xzf openvino_genai_ubuntu20_2025.2.0.0.dev20250320_x86_64.tar.gz
           source openvino_genai_ubuntu20_2025.2.0.0.dev20250320_x86_64/setupvars.sh
+          printenv OpenVINO_DIR
 
       - name: Prepare compile
         run: |
@@ -44,6 +45,7 @@ jobs:
       - name: Build ollama-ov
         run: | 
           echo $PWD
+          ls $PWD
           cd ${{ github.workspace }}/ollama_ov
           export GODEBUG=cgocheck=0
           export CGO_LDFLAGS=-L$OpenVINO_DIR/../lib/intel64/
