--- a/.github/workflows/ollama_openvino_build_and_test.yml
+++ b/.github/workflows/ollama_openvino_build_and_test.yml
@@ -29,15 +29,12 @@ jobs:
           mkdir -p go
           tar xvzf go1.24.1.linux-amd64.tar.gz
       
-      - name: Install openvino_genai
+      - name: Install openvino_genai and init go env
         run: |
           wget https://storage.openvinotoolkit.org/repositories/openvino_genai/packages/nightly/2025.2.0.0.dev20250320/openvino_genai_ubuntu20_2025.2.0.0.dev20250320_x86_64.tar.gz
           tar -xzf openvino_genai_ubuntu20_2025.2.0.0.dev20250320_x86_64.tar.gz
           source openvino_genai_ubuntu20_2025.2.0.0.dev20250320_x86_64/setupvars.sh
           printenv OpenVINO_DIR
-
-      - name: Prepare compile
-        run: |
           chmod +x ./
           export LD_LIBRARY_PATH=${{ github.workspace }}/go/bin:$LD_LIBRARY_PATH
           go env -w CGO_ENABLED=1
