--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -131,6 +131,7 @@ jobs:
             -DENABLE_WHEEL=ON \
             -DENABLE_TESTS=ON \
             -DENABLE_INTEL_NPU=OFF \
+            -DBUILD_ollama_openvino=OFF \
             -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CMAKE_CXX_COMPILER_LAUNCHER }} \
             -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CMAKE_C_COMPILER_LAUNCHER }} \
             -S ${OPENVINO_REPO} \
