--- a/.github/workflows/ollama_openvino_build_and_test.yml
+++ b/.github/workflows/ollama_openvino_build_and_test.yml
@@ -38,8 +38,6 @@ jobs:
           chmod +x ./
           export LD_LIBRARY_PATH=${{ github.workspace }}/go/bin:$LD_LIBRARY_PATH
           go env -w CGO_ENABLED=1
-          echo $PWD
-          ls $PWD
           cd ${{ github.workspace }}/ollama_ov
           export GODEBUG=cgocheck=0
           export CGO_LDFLAGS=-L$OpenVINO_DIR/../lib/intel64/
@@ -56,8 +54,9 @@ jobs:
 
       - name: Create ollama model
         run: |
-          ollama serve && ollama create DeepSeek-R1-Distill-Qwen-7B-int4-ov:v1 -f examples/modelfile/deepseek_r1_distill_qwen/Modelfile
-          ollama run DeepSeek-R1-Distill-Qwen-7B-int4-ov:v1
+          ./ollama serve &
+          ./ollama create DeepSeek-R1-Distill-Qwen-7B-int4-ov:v1 -f examples/modelfile/deepseek_r1_distill_qwen/Modelfile
+          ./ollama run DeepSeek-R1-Distill-Qwen-7B-int4-ov:v1 "Who are you? Please give a brief answer"
 
 
 
