--- a/.github/workflows/ollama_openvino_build_and_test.yml
+++ b/.github/workflows/ollama_openvino_build_and_test.yml
@@ -45,6 +45,10 @@ jobs:
           printenv CGO_LDFLAGS
           printenv CGO_CFLAGS
           go build -o ollama
+          mkdir bin
+          mv ollama bin
+          export PATH=$PATH:$PWD/bin
+          printenv PATH
           
       - name: Download model
         run: |
@@ -54,9 +58,10 @@ jobs:
 
       - name: Create ollama model
         run: |
-          ./ollama serve &
-          ./ollama create DeepSeek-R1-Distill-Qwen-7B-int4-ov:v1 -f examples/modelfile/deepseek_r1_distill_qwen/Modelfile
-          ./ollama run DeepSeek-R1-Distill-Qwen-7B-int4-ov:v1 "Who are you? Please give a brief answer"
+          printenv PATH
+          ollama serve &
+          ollama create DeepSeek-R1-Distill-Qwen-7B-int4-ov:v1 -f examples/modelfile/deepseek_r1_distill_qwen/Modelfile
+          ollama run DeepSeek-R1-Distill-Qwen-7B-int4-ov:v1 "Who are you? Please give a brief answer"
 
 
 
