--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,7 +25,7 @@ jobs:
     defaults:
       run:
         shell: bash
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04-16-cores
     container:
       image: ubuntu:22.04
     env:
@@ -214,7 +214,7 @@ jobs:
     defaults:
       run:
         shell: bash
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04-16-cores
     container:
       image: nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
     env:
