--- a/.github/workflows/code_style.yml
+++ b/.github/workflows/code_style.yml
@@ -16,8 +16,14 @@ jobs:
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
 
+      - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
+        with:
+          distribution: "temurin"
+          java-version: 21
+
       - name: Fix code java style
-        uses: axel-op/googlejavaformat-action@dbff853fb823671ec5781365233bf86543b13215 # v3
+        uses: axel-op/googlejavaformat-action@c1134ebd196c4cbffb077f9476585b0be8b6afcd # v4
         with:
           args: "--set-exit-if-changed -a -i"
           commit-message: "[github actions] Apply google-java-format code style fixes"
+          files: "modules/java_api/**/*.java"
