[JAVA_API] Adjust Java sample build scripts for Gradle 8+ mainClass handling
Replace deprecated (version 7) and later removed (version 8) `mainClassName` option with the `application { mainClass = <class_name> }` in the `hello_query_device` and `face_detection samples` so they build with newer Gradle versions

--- a/modules/java_api/samples/face_detection_java_sample/build.gradle
+++ b/modules/java_api/samples/face_detection_java_sample/build.gradle
@@ -35,7 +35,10 @@ sourceSets {
         }
     }
 }
-mainClassName = 'Main'
+
+application {
+    mainClass = 'Main'
+}
 
 dependencies {  
     implementation rootProject
