--- a/modules/java_api/samples/hello_query_device/build.gradle
+++ b/modules/java_api/samples/hello_query_device/build.gradle
@@ -10,7 +10,10 @@ sourceSets {
         }
     }
 }
-mainClassName = 'Main'
+
+application {
+    mainClass = 'Main'
+}
 
 dependencies {  
     implementation rootProject
