--- a/modules/java_api/settings.gradle
+++ b/modules/java_api/settings.gradle
@@ -1,10 +1,7 @@
 rootProject.name = 'openvino'
 
-if (build_benchmark_app.toBoolean()) {
-    include 'samples:benchmark_app'
-}
 if (build_java_samples.toBoolean()) {
-    include 'samples:face_detection_java_sample', 'samples:face_detection_sample_async'
+    include 'samples:face_detection_java_sample'
 }
 if (build_kotlin_samples.toBoolean()) {
     include 'samples:face_detection_kotlin_sample'
