--- a/modules/ollama_openvino/Dockerfile_genai_ubuntu24
+++ b/modules/ollama_openvino/Dockerfile_genai_ubuntu24
@@ -17,11 +17,11 @@ ARG GOVERSION=1.24.1
 RUN curl -fsSL https://golang.org/dl/go${GOVERSION}.linux-$(case $(uname -m) in x86_64) echo amd64 ;; aarch64) echo arm64 ;; esac).tar.gz | tar xz -C /usr/local
 ENV PATH=/usr/local/go/bin:$PATH
 
-RUN wget https://storage.openvinotoolkit.org/repositories/openvino_genai/packages/nightly/2025.2.0.0.dev20250513/openvino_genai_ubuntu24_2025.2.0.0.dev20250513_x86_64.tar.gz
-RUN tar -xzf openvino_genai_ubuntu24_2025.2.0.0.dev20250513_x86_64.tar.gz
-ENV GENAI_DIR=/home/ollama_ov_server/openvino_genai_ubuntu24_2025.2.0.0.dev20250513_x86_64
+RUN wget https://storage.openvinotoolkit.org/repositories/openvino_genai/packages/2025.4/linux/openvino_genai_ubuntu24_2025.4.0.0_x86_64.tar.gz
+RUN tar -xzf openvino_genai_ubuntu24_2025.4.0.0_x86_64.tar.gz
+ENV GENAI_DIR=/home/ollama_ov_server/openvino_genai_ubuntu24_2025.4.0.0_x86_64
 
-RUN source /home/ollama_ov_server/openvino_genai_ubuntu24_2025.2.0.0.dev20250513_x86_64/setupvars.sh
+RUN source /home/ollama_ov_server/openvino_genai_ubuntu24_2025.4.0.0_x86_64/setupvars.sh
 
 ENV CGO_ENABLED=1
 ENV GODEBUG=cgocheck=0
