--- a/modules/3d/pointPillars/requirements.txt
+++ b/modules/3d/pointPillars/requirements.txt
@@ -5,7 +5,7 @@ opencv-python-headless==4.12.0.88
 PyYAML==6.0.3
 setuptools==80.9.0
 tensorboard==2.20.0
-torch==2.9.0
+torch==2.9.0 --extra-index-url https://download.pytorch.org/whl/cpu
 openvino==2025.3.0
 tqdm==4.67.1
 onnx==1.19.1
